Add refresh parameter to fetch automatically every 5 seconds for new events

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,14 @@
 
     <div class="row">
         <div class="col-12">
-            <app-settings [abi]="control.abi" [connected]="control.entity.connected" [contract]="control.contract" [endBlock]="control.endBlock"
-                          [lastBlock]="control.entity.currentBlock" [provider]="control.provider" [startBlock]="control.startInitial">
+            <app-settings [abi]="control.abi"
+                          [connected]="control.entity.connected"
+                          [contract]="control.contract"
+                          [endBlock]="control.endBlock"
+                          [lastBlock]="control.entity.currentBlock"
+                          [provider]="control.provider"
+                          [refresh]="control.refresh"
+                          [startBlock]="control.startInitial">
 
             </app-settings>
         </div>
