--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -59,6 +59,18 @@
         </div>
     </div>
 
+    <div class="row">
+         <div class="col-12">
+            <div class="header_area">
+                <div>
+                    <mat-checkbox  [(ngModel)]="refresh"  class="example-margin" formControlName="refresh" id="refresh" >
+                        Refresh
+                    </mat-checkbox>
+              </div>
+            </div>
+        </div>
+    </div>
+
 </form>
 
 
