--- a/src/app/details/info-modal.component.html
+++ b/src/app/details/info-modal.component.html
@@ -1,7 +1,7 @@
 <h2 mat-dialog-title>{{data.block.length > 0 ? 'Block' : 'Transaction'}}</h2>
 
 <div mat-dialog-content>
-    <div [innerHTML]="content"></div>
+    <div [innerHTML]="data.content"></div>
 </div>
 
 <div class="action" mat-dialog-actions>
