--- a/src/app/table/table-complete.html
+++ b/src/app/table/table-complete.html
@@ -41,7 +41,7 @@
             <thead>
             <tr>
                 <th scope="col">#</th>
-                <th (sort)="onSort($event)" scope="col" sortable="name">Event</th>
+                <th (sort)="onSort($event)" scope="col" sortable="name" id="sort-by-Name">Event</th>
                 <th (sort)="onSort($event)" scope="col" sortable="block">Block</th>
                 <th (sort)="onSort($event)" scope="col" sortable="trxHash">TrxHash</th>
                 <th>Key</th>
