--- a/src/app/table/table-complete.css
+++ b/src/app/table/table-complete.css
@@ -1,9 +1,8 @@
 
 td {
-    white-space: pre; /* o pre-wrap o pre-line */
+    white-space: pre;
 }
 
 .table-link {
-    text-decoration: underline;
     color: dodgerblue;
 }
