--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -13,7 +13,7 @@
             <div class="header_area">
                 <div>
                     <label for="provider">Provider <span *ngIf="form.get('provider').status === 'PENDING'" class="hint"> connecting...</span></label>
-                    <input [value]="provider" oninput="setTimeout(document.getElementById('sort-by-Name').dispatchEvent(new MouseEvent('click')), 5000);"
+                    <input [value]="provider" 
                            class="form-control form-control-sm" formControlName="provider" id="provider" placeholder="Enter here a valid web3 provider URL" type="text">
                 </div>
             </div>
@@ -33,7 +33,7 @@
             <div class="header_area">
                 <div>
                     <label for="contract">Contract Address <span *ngIf="form.get('contract').status === 'PENDING'" class="hint"> checking...</span></label>
-                    <input [value]="contract" oninput="setTimeout(document.getElementById('sort-by-Name').dispatchEvent(new MouseEvent('click')), 5000);"
+                    <input [value]="contract" 
                            class="form-control form-control-sm" formControlName="contract" id="contract" placeholder="Enter here the contract address as hex number" type="text">
                 </div>
             </div>
@@ -53,7 +53,7 @@
             <div class="header_area">
                 <div>
                     <label for="abi">Contract ABI <span *ngIf="form.get('abi').status === 'PENDING'" class="hint"> checking...</span></label>
-                    <input [value]="abi" oninput="setTimeout(document.getElementById('sort-by-Name').dispatchEvent(new MouseEvent('click')), 5000);"
+                    <input [value]="abi" 
                            class="form-control form-control-sm" formControlName="abi" id="abi" placeholder="Enter here the abi array" type="text">
                 </div>
             </div>
@@ -64,16 +64,16 @@
         <div class="col-2">
             <div class="header_area">
                 <div>
-                    <mat-checkbox [(ngModel)]="refresh" class="example-margin" formControlName="refresh" id="refresh">
+                    <mat-checkbox [(ngModel)]="refresh" formControlName="refresh" id="refresh">
                         Refresh
                     </mat-checkbox>
                 </div>
             </div>
         </div>
+
         <div class="col-10">
             <div class="header_area">
-                 <div class="header_area">
-                    <mat-progress-bar class="example-margin"
+                    <mat-progress-bar class="progress-bar"
                                       [value]="appComponent.control.eventsProgress"
                                       [color]="color"
                                       [mode]="mode"
@@ -82,8 +82,11 @@
                 </div>
             </div>
         </div>
-    </div>
 
 </form>
+
+<!--
+
+                                    -->
 
 
