- fix table update problem

--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -77,7 +77,7 @@
                                       [value]="appComponent.control.eventsProgress"
                                       [color]="color"
                                       [mode]="mode"
-                                      *ngIf="appComponent.control.eventsProgress > 1 && updateTable()"
+                                      *ngIf="appComponent.control.eventsProgress > 1"
                     ></mat-progress-bar>
                 </div>
             </div>
