--- a/src/app/table/table-complete.html
+++ b/src/app/table/table-complete.html
@@ -40,7 +40,7 @@
         <table class="table">
             <thead>
             <tr>
-                <th (sort)="onSort($event)" scope="col" sortable="id">#</th>
+                <th (sort)="onSort($event)" scope="col" sortable="id" id="sort-by-Name">#</th>
                 <th (sort)="onSort($event)" scope="col" sortable="name">Event</th>
                 <th (sort)="onSort($event)" scope="col" sortable="block">Block</th>
                 <th (sort)="onSort($event)" scope="col" sortable="trxHash">TrxHash</th>
