--- a/src/app/details/info-modal.component.css
+++ b/src/app/details/info-modal.component.css
@@ -1,6 +1,6 @@
 h2 {
-    font-family: monospace;
-    font-size: 1.77rem;
+    /* font-family: monospace;
+    font-size: 1.77rem;*/
     text-align: left;
 }
 
