--- a/src/app/settings/settings.component.css
+++ b/src/app/settings/settings.component.css
@@ -1,3 +1,4 @@
+
 .form-control.ng-invalid {
     background-color: lightcoral;
 }
@@ -10,12 +11,15 @@
     border-color: #ccc;
 }
 
-.mat-checkbox {
-    font-family: monospace;
-}
-
 .progress-bar {
     margin-top: 0.5rem;
     border-radius: 0.2em;
     height: 0.4em;
+}
+
+.mat-expansion-panel-header.mat-expanded,
+.mat-expansion-panel-header.mat-expanded:hover,
+.mat-expansion-panel-header.mat-expanded:focus {
+    background-color: lightgray;
+
 }
