--- a/src/bootstrap-dark.css
+++ b/src/bootstrap-dark.css
@@ -60,7 +60,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-    font-size: 0.9375rem;
+     /* font-family: monospace; */: 0.9375rem;
     font-weight: 400;
     line-height: 1.5;
     color: #aaa;
