--- a/src/app/table/table-complete.html
+++ b/src/app/table/table-complete.html
@@ -1,14 +1,8 @@
-<form>
-    <div class="row">
-        <div class="col-12">
-            <div class="header_area">
-                <div>
-                    <label for="status_message_text2">Filter</label>
-                    <input [(ngModel)]="service.searchTerm" class="form-control form-control-sm" id="status_message_text2" name="searchTerm" type="text"/>
-                </div>
-            </div>
-        </div>
-    </div>
+<form [formGroup]="formResult">
+
+    <mat-form-field style="width: 100%;" color='primary'>
+        <input (change)="updateSearchTerm()" formControlName="searchTerm" id="searchTerm" matInput placeholder="Search" type="text" [value]="searchTerm">
+    </mat-form-field>
 
     <div class="row">
         <div class="col-12">
@@ -41,7 +35,7 @@
             <thead>
             <tr>
                 <th (sort)="onSort($event)" scope="col" sortable="name" id="sort-by-Name">Event<i class="fa fa-fw fa-sort"></i></th>
-                <th (sort)="onSort($event)" scope="col" sortable="block"  id="sort-by-block">Block<i class="fa fa-fw fa-sort"></i></th>
+                <th (sort)="onSort($event)" scope="col" sortable="block" id="sort-by-block">Block<i class="fa fa-fw fa-sort"></i></th>
                 <th (sort)="onSort($event)" scope="col" sortable="trxHash">TrxHash<i class="fa fa-fw fa-sort"></i></th>
                 <th>Key</th>
                 <th>Value</th>
