UI improvements (continue migration to material)

--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -54,7 +54,7 @@
 
     <p></p>
 
-    <mat-checkbox (change)="updateRefreshValue()" [(ngModel)]="refresh" [color]="'primary'" formControlName="refresh" id="refresh">Refresh</mat-checkbox>
+    <mat-checkbox (click)="updateRefreshValue()" [(ngModel)]="refresh" [color]="'primary'" formControlName="refresh" id="refresh">Update</mat-checkbox>
 
 </form>
 
