--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,7 @@
 
     <div class="row">
         <div class="col-12">
-            <table-complete></table-complete>
+            <app-events-list></app-events-list>
         </div>
     </div>
 
