UI improvements (migration to material)

--- a/src/app/details/info-modal.component.css
+++ b/src/app/details/info-modal.component.css
@@ -1,19 +1,8 @@
-h2 {
-    /* font-family: monospace;
-    font-size: 1.77rem;*/
-    text-align: left;
-}
-
 mat-dialog-content {
     padding: 30px;
 }
 
-.action {
-    margin-top: 20px;
-    display: flex;
-    justify-content: center;
-}
-
-.action.mat-dialog-actions {
-    margin-bottom: 0;
+div {
+    font-family: monospace;
+    font-size: 0.8rem;
 }
