--- a/src/app/details/info-modal.component.html
+++ b/src/app/details/info-modal.component.html
@@ -1,9 +1,10 @@
-<h2 mat-dialog-title>{{data.block.length > 0 ? 'Block': 'Transaction'}}</h2>
+<h2 mat-dialog-title>
+    {{data.block.length > 0 ? 'Block': 'Transaction'}}
+</h2>
 
-<div mat-dialog-content>
-    <div [innerHTML]="data.content"></div>
+<div mat-dialog-content [innerHTML]="data.content">
 </div>
 
-<div class="action" mat-dialog-actions>
-    <button (click)="onCloseClick()" class="btn btn-primary">Schließen</button>
+<div mat-dialog-actions>
+    <button mat-button color="primary" (click)="onCloseClick()">Schließen</button>
 </div>
